added image carousel

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Get in touch</a>
             </li>
-            <li class="nav-item btn btn-info">
-              <a class="nav-link" href="#">Buy now</a>
+            <li class="nav-item">
+              <a class="btn btn-secondary" href="#">Buy now</a>
             </li>
           </ul>
         </div>
@@ -61,6 +61,28 @@
     <!-- nav -->
 
     <!-- carousel -->
+
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://m.media-amazon.com/images/I/916fujvwT+L._AC_UF1000,1000_QL80_.jpg" class="d-block w-100 " alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://1.bp.blogspot.com/-fNuB2jP6XhU/XQG91Un9WYI/AAAAAAAABJg/_hepgvvPN1kc9EB4l5bSVqLVrJUAWwB1QCLcBGAs/w1200-h630-p-k-no-nu/Screenshot_2019-06-12-15-35-32-029.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="https://wtzupcity.com/upload/95574mallumagazines.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <!-- carousel -->
 
     <!-- hero -->
