--- a/index.html
+++ b/index.html
@@ -62,23 +62,45 @@
 
     <!-- carousel -->
 
-    <div id="carouselExample" class="carousel slide">
+    <div id="carouselExample" class="carousel slide mb-5">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://m.media-amazon.com/images/I/916fujvwT+L._AC_UF1000,1000_QL80_.jpg" class="d-block w-100 " alt="...">
+          <img
+            src="https://m.media-amazon.com/images/I/916fujvwT+L._AC_UF1000,1000_QL80_.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
         </div>
         <div class="carousel-item">
-          <img src="https://1.bp.blogspot.com/-fNuB2jP6XhU/XQG91Un9WYI/AAAAAAAABJg/_hepgvvPN1kc9EB4l5bSVqLVrJUAWwB1QCLcBGAs/w1200-h630-p-k-no-nu/Screenshot_2019-06-12-15-35-32-029.jpeg" class="d-block w-100" alt="...">
+          <img
+            src="https://1.bp.blogspot.com/-fNuB2jP6XhU/XQG91Un9WYI/AAAAAAAABJg/_hepgvvPN1kc9EB4l5bSVqLVrJUAWwB1QCLcBGAs/w1200-h630-p-k-no-nu/Screenshot_2019-06-12-15-35-32-029.jpeg"
+            class="d-block w-100"
+            alt="..."
+          />
         </div>
         <div class="carousel-item">
-          <img src="https://wtzupcity.com/upload/95574mallumagazines.jpg" class="d-block w-100" alt="...">
+          <img
+            src="https://wtzupcity.com/upload/95574mallumagazines.jpg"
+            class="d-block w-100"
+            alt="..."
+          />
         </div>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
@@ -86,6 +108,34 @@
     <!-- carousel -->
 
     <!-- hero -->
+<section>
+    <div class="container text-center">
+      <div class="row">
+        <div
+          class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center"
+        >
+          <h1 class="display-1">Have Fun</h1>
+          <p class="display-6 text-muted">
+            Start reading the best cartoon series
+          </p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <button>Buy now</button>
+          <br />
+          <a href="">Explore other books</a>
+        </div>
+        <div
+          class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center"
+        >
+          <img
+            src="https://files.magzter.com/resize/magazine/1602487920/1674191362/view/3.jpg"
+            alt=""
+            class="img-fluid"
+            width="400px"
+          />
+        </div>
+      </div>
+    </div>
+  </section>
     <!-- hero -->
 
     <!-- pricing -->
