--- a/index.html
+++ b/index.html
@@ -108,37 +108,79 @@
     <!-- carousel -->
 
     <!-- hero -->
-<section>
-    <div class="container text-center">
-      <div class="row">
-        <div
-          class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center"
-        >
-          <h1 class="display-1">Have Fun</h1>
-          <p class="display-6 text-muted">
-            Start reading the best cartoon series
-          </p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          <button>Buy now</button>
-          <br />
-          <a href="">Explore other books</a>
-        </div>
-        <div
-          class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center"
-        >
-          <img
-            src="https://files.magzter.com/resize/magazine/1602487920/1674191362/view/3.jpg"
-            alt=""
-            class="img-fluid"
-            width="400px"
-          />
+    <section class="hero py-5">
+      <div class="container text-center">
+        <div class="row">
+          <div
+            class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center"
+          >
+            <h1 class="display-1">Have Fun</h1>
+            <p class="display-6 text-muted">
+              Start reading the best cartoon series
+            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button>Buy now</button>
+            <br />
+            <a href="">Explore other books</a>
+          </div>
+          <div
+            class="col-12 col-md-6 col-lg-6 justify-content-center align-items-center"
+          >
+            <img
+              src="https://files.magzter.com/resize/magazine/1602487920/1674191362/view/3.jpg"
+              alt=""
+              class="img-fluid"
+              width="400px"
+            />
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
     <!-- hero -->
 
     <!-- pricing -->
+    <section class="pricing">
+      <div class="container">
+        <div class="text-center">
+          <h2>Pricing Plans</h2>
+          <p class="lead text-muted">Choose a pricing plan to suit you</p>
+        </div>
+
+        <div class="row">
+          <div class="col-12 col-md-4 col-lg-4 mb-3 mb-sm-0">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Starter Edition</h5>
+                <p class="card-text">E book download only</p>
+                <p class="display-5 my-4 text-primary fw-bold">$ 401</p>
+                <a href="#" class="btn btn-outline-primary">Buy Now</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 col-lg-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Complete Editiont</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="display-5 my-4 text-primary fw-bold">$ 501</p>
+                <a href="#" class="btn btn-outline-primary">Buy Now</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-md-4 col-lg-4">
+            <div class="card">
+              <div class="card-body">
+                <h5 class="card-title">Ultimate Edition</h5>
+                <p class="card-text">Download, updates and extras</p>
+                <p class="display-5 my-4 text-primary fw-bold">$ 601</p>
+                <a href="#" class="btn btn-outline-primary">Buy Now</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- pricing -->
 
     <!-- bookcontent -->
