--- a/index.html
+++ b/index.html
@@ -184,6 +184,109 @@
     <!-- pricing -->
 
     <!-- bookcontent -->
+    <section class="bookcontent py-5">
+      <div class="container">
+        <div class="text-center">
+          <h2>Inside the book..</h2>
+          <p class="lead text-muted">A quick glance at the topics</p>
+        </div>
+
+        <div class="row">
+          <div class="col-12 col-md-6 col-lg-6">
+            <img
+              src="https://imgv2-2-f.scribdassets.com/img/document/438020807/original/4f25f1759d/1705612923?v=1"
+              class="img-fluid"
+              alt=""
+              width="400px"
+            />
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-6 py-5">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne"
+                    aria-expanded="true"
+                    aria-controls="collapseOne"
+                  >
+                    Mayavi
+                  </button>
+                </h2>
+                <div
+                  id="collapseOne"
+                  class="accordion-collapse collapse show"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Itaque quos ullam provident quaerat nam vel.
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseTwo"
+                    aria-expanded="false"
+                    aria-controls="collapseTwo"
+                  >
+                    Soothranum Sheruvum
+                  </button>
+                </h2>
+                <div
+                  id="collapseTwo"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                      Facere aut vero excepturi? Veniam corporis distinctio
+                      sapiente et eveniet fugit hic!
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#collapseThree"
+                    aria-expanded="false"
+                    aria-controls="collapseThree"
+                  >
+                    Shikkari Shambu
+                  </button>
+                </h2>
+                <div
+                  id="collapseThree"
+                  class="accordion-collapse collapse"
+                  data-bs-parent="#accordionExample"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                      Repellat eius sint in!
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- bookcontent -->
 
     <!-- tab  -->
