--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
   </head>
   <body>
     <!-- nav -->
@@ -288,6 +292,106 @@
       </div>
     </section>
     <!-- bookcontent -->
+
+    <!-- bookreview  -->
+    <section class="reviews">
+      <div class="container">
+        <div class="text-center">
+          <h2><i class="bi bi-stars"></i>Book reviews</h2>
+          <p class="lead">What my students have said about the book...</p>
+        </div>
+        <div class="row justify-content-center py-5">
+          <div class="col-12">
+            <div class="list-group">
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
+                <h5>A must buy for kids</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Libero esse earum, eos dolorum eveniet nam distinctio, dolor
+                  fugiat voluptates voluptate veritatis vel tempore molestias,
+                  possimus pariatur quaerat labore velit cum?
+                </p>
+                <small>Review by Amal</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12">
+            <div class="list-group">
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
+                <h5>A must buy for kids</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Libero esse earum, eos dolorum eveniet nam distinctio, dolor
+                  fugiat voluptates voluptate veritatis vel tempore molestias,
+                  possimus pariatur quaerat labore velit cum?
+                </p>
+                <small>Review by Amal</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12">
+            <div class="list-group">
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
+                <h5>A must buy for kids</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Libero esse earum, eos dolorum eveniet nam distinctio, dolor
+                  fugiat voluptates voluptate veritatis vel tempore molestias,
+                  possimus pariatur quaerat labore velit cum?
+                </p>
+                <small>Review by Amal</small>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12">
+            <div class="list-group">
+              <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
+                <h5>A must buy for kids</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Libero esse earum, eos dolorum eveniet nam distinctio, dolor
+                  fugiat voluptates voluptate veritatis vel tempore molestias,
+                  possimus pariatur quaerat labore velit cum?
+                </p>
+                <small>Review by Amal</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- bookreview  -->
 
     <!-- tab  -->
     <!-- tab  -->
