--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <p class="lead">What my students have said about the book...</p>
         </div>
         <div class="row justify-content-center py-5">
-          <div class="col-12">
+          <div class="col-lg-8">
             <div class="list-group">
               <div class="list-group-item py-3">
                 <div class="pb-2">
@@ -323,7 +323,7 @@
             </div>
           </div>
 
-          <div class="col-12">
+          <div class="col-lg-8">
             <div class="list-group">
               <div class="list-group-item py-3">
                 <div class="pb-2">
@@ -345,7 +345,7 @@
             </div>
           </div>
 
-          <div class="col-12">
+          <div class="col-lg-8">
             <div class="list-group">
               <div class="list-group-item py-3">
                 <div class="pb-2">
@@ -367,7 +367,7 @@
             </div>
           </div>
 
-          <div class="col-12">
+          <div class="col-lg-8">
             <div class="list-group">
               <div class="list-group-item py-3">
                 <div class="pb-2">
@@ -394,6 +394,91 @@
     <!-- bookreview  -->
 
     <!-- tab  -->
+
+    <section class="tabs">
+      <div class="container py-5">
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link active"
+              id="pills-home-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-home"
+              type="button"
+              role="tab"
+              aria-controls="pills-home"
+              aria-selected="true"
+            >
+              Home
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link"
+              id="pills-profile-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-profile"
+              type="button"
+              role="tab"
+              aria-controls="pills-profile"
+              aria-selected="false"
+            >
+              Profile
+            </button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button
+              class="nav-link"
+              id="pills-contact-tab"
+              data-bs-toggle="pill"
+              data-bs-target="#pills-contact"
+              type="button"
+              role="tab"
+              aria-controls="pills-contact"
+              aria-selected="false"
+            >
+              Contact
+            </button>
+          </li>
+        </ul>
+        <div class="tab-content" id="pills-tabContent">
+          <div
+            class="tab-pane fade show active"
+            id="pills-home"
+            role="tabpanel"
+            aria-labelledby="pills-home-tab"
+            tabindex="0"
+          >
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut vitae
+            saepe fugit laboriosam odio maxime minima sint exercitationem eaque
+            aspernatur.
+          </div>
+          <div
+            class="tab-pane fade"
+            id="pills-profile"
+            role="tabpanel"
+            aria-labelledby="pills-profile-tab"
+            tabindex="0"
+          >
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti
+            incidunt maiores, voluptatem nobis optio porro quasi quia est quidem
+            quo quod praesentium saepe corporis rerum assumenda ea reiciendis
+            quis magni?
+          </div>
+          <div
+            class="tab-pane fade"
+            id="pills-contact"
+            role="tabpanel"
+            aria-labelledby="pills-contact-tab"
+            tabindex="0"
+          >
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam
+            alias officia corrupti soluta culpa esse a odit sequi. Veritatis
+            corporis eius laudantium odit dignissimos velit.
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- tab  -->
 
     <!-- contact form  -->
