added contact section

--- a/index.html
+++ b/index.html
@@ -482,6 +482,37 @@
     <!-- tab  -->
 
     <!-- contact form  -->
+    <section class=" contact bg-light py-5  ">
+      
+        <div class="container col-lg-6">
+          <div class="text-center">
+            <h2>Get in touch</h2>
+            <p class="lead text-muted">Questions to ask? Fill out the forms to contact me directly</p>
+          </div>
+      <form class="row g-3">
+        <div class="col-md-6">
+          <label for="inputEmail4" class="form-label">Name</label>
+          <input type="text" class="form-control" id="inputEmail4" />
+        </div>
+        <div class="col-md-6">
+          <label for="inputPassword4" class="form-label">Email</label>
+          <input type="email" class="form-control" id="inputPassword4" />
+        </div>
+        <div class="col-12">
+          <label for="inputAddress" class="form-label">Whats your question about?</label>
+          <input
+            type="text"
+            class="form-control"
+            id="inputAddress"
+            placeholder="question"
+          />
+        </div>
+        
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </section>
     <!-- contact form  -->
 
     <!-- footer  -->
